# swerve-powerchair-software

./: README.md  pubkey  pubkey.pub
devel/: .catkin  (+4 more)
src/One_wheel_frame_Assembly_v1/: CMakeLists.txt  package.xml  urdf.rviz
src/One_wheel_frame_Assembly_v1/config/: joint_controllers.yaml
src/One_wheel_frame_Assembly_v1/launch/: display.launch  display_module.launch  gazebo.launch  gazebo_module.launch  gazebo_module_cent.launch  gazebo_module_cent_joy.launch
src/One_wheel_frame_Assembly_v1/meshes/: chassis_link.STL  chassis_wheel_left.STL  chassis_wheel_right.STL
src/One_wheel_frame_Assembly_v1/urdf/: One_wheel_frame_Assembly_plus_module.urdf  One_wheel_frame_Assembly_plus_module_center.urdf  One_wheel_frame_Assembly_v1.csv  One_wheel_frame_Assembly_v1.urdf
src/ROS_Module_Assembly_Four_Wheel_v1/: CMakeLists.txt  package.xml  urdf.rviz
src/ROS_Module_Assembly_Four_Wheel_v1/config/: joint_controllers.yaml  joint_names_ROS_Module_Assembly_Four_Wheel_v1.yaml
src/ROS_Module_Assembly_Four_Wheel_v1/launch/: display.launch  display_base_only.launch  display_fresh.launch  display_fresh_test.launch  gazebo.launch  gazebo_fresh.launch
src/ROS_Module_Assembly_Four_Wheel_v1/meshes/: chassis_link.STL
src/ROS_Module_Assembly_Four_Wheel_v1/urdf/: ROS_Module_Assembly_Four_Wheel_base_only.urdf.xacro  ROS_Module_Assembly_Four_Wheel_v1.csv  ROS_Module_Assembly_Four_Wheel_v1.urdf  ROS_Module_Assembly_Four_Wheel_v1_fresh.urdf  ROS_Module_Assembly_Four_Wheel_v1_fresh.urdf.xacro  ROS_Module_Assembly_Four_Wheel_v1_module.xacro  ROS_Module_Assembly_Four_Wheel_v1_module_inertial.xacro
src/test_rover_V1/: CMakeLists.txt  model.config  simple_urdf.rviz  urdf.rviz
src/test_rover_V1/config/: controllers.yaml  controllers_fourwheel.yaml  controllers_new.yaml  joint_names_test_rover_simplified_assembly_V2.yaml  joint_names_test_rover_simplified_assembly_V4.yaml
(+205 files in other folders)
