<package format="2">
  <name>ROS_Module_Assembly_Four_Wheel_v1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ROS_Module_Assembly_Four_Wheel_v1</p>
    <p>This package contains configuration data, 3D models and launch files
for ROS_Module_Assembly_Four_Wheel_v1 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
    <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <build_export_depend>gazebo_ros</build_export_depend>
   <exec_depend>gazebo_ros</exec_depend>
   

  <export>
    <architecture_independent />
  </export>
</package>
